Fix: issue 339 add truncate class to LocationBlock

--- a/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
+++ b/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
@@ -82,6 +82,7 @@
       display: flex;
       transition: 0.2s;
       flex-grow: 1;
+      width: 60%;
 
       .infoContainer {
         display: flex;
@@ -103,6 +104,11 @@
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
+    }
+    .truncate {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
