--- a/src/App/components/Section/components/LocationBlock/components/TimeInfo/TimeInfo.module.scss
+++ b/src/App/components/Section/components/LocationBlock/components/TimeInfo/TimeInfo.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  width: 40%;
 
   .timeInfo {
     font-family: roboto-medium;
